<resources>
    <string name="abort">Przerwij</string>
    <string name="add">Dodaj</string>
    <string name="agenda_lesson_changes">Zmiany planu lekcji</string>
    <string name="agenda_teacher_absence">Nieobecni nauczyciele</string>
    <string name="ago_format">%s temu</string>
    <string name="app_manager_dialog_text">Na urządzeniu prawdopodobnie zainstalowany jest menedżer aplikacji, który może powodować problemy z synchronizacją automatyczną.\n\nNależy wyłączyć w ustawieniach telefonu optymalizację baterii dla aplikacji Szkolny.eu.\n\nKliknij OK, aby przejść do ustawień telefonu.</string>
    <string name="app_manager_dialog_title">Wykryto problem z synchronizacją</string>
    <string name="app_manager_open_failed">Nie udało się otworzyć ustawień</string>
    <string name="app_name" translatable="false">Szkolny.eu</string>
    <string name="app_task_format" translatable="false">Szkolny.eu | %s</string>
    <string name="are_you_sure">Czy na pewno?</string>
    <string name="attendance_absent" translatable="false">nb</string>
    <string name="attendance_absent_excused" translatable="false">u</string>
    <string name="attendance_belated" translatable="false">sp</string>
    <string name="attendance_belated_excused" translatable="false">su</string>
    <string name="attendance_config_group_consecutive_days">Grupuj kolejne dni na liście</string>
    <string name="attendance_config_show_presence_in_month">Wyświetlaj obecność w widoku miesięcy</string>
    <string name="attendance_config_title">Konfiguracja frekwencji</string>
    <string name="attendance_config_use_symbols">Używaj symboli i kolorów wg dziennika</string>
    <string name="attendance_config_use_symbols_hint">Widoczne po rozwinięciu listy</string>
    <string name="attendance_empty_text">Nie ma tutaj żadnych nieobecności.</string>
    <string name="attendance_free_day" translatable="false">w</string>
    <string name="attendance_lesson_number_format">lekcja %d</string>
    <string name="attendance_percentage_format">%.2f%%</string>
    <string name="attendance_period_summary_format">Obecność w tym okresie: %.2f%%</string>
    <string name="attendance_present" translatable="false">ob</string>
    <string name="attendance_released" translatable="false">zw</string>
    <string name="attendance_summary_title_semester_format">Podsumowanie - semestr %d </string>
    <string name="attendance_summary_title_year">Podsumowanie - cały rok </string>
    <string name="attendance_tab_days">Dni</string>
    <string name="attendance_tab_list">Lista</string>
    <string name="attendance_tab_months">Miesiące</string>
    <string name="attendance_tab_summary">Podsumowanie</string>
    <string name="attendances_absent">Nieobecności:</string>
    <string name="attendances_absent_unexcused">W tym nieusprawiedliwione:</string>
    <string name="attendances_belated">Spóźnienia:</string>
    <string name="attendances_no_data">Nie masz żadnych nieobecności.</string>
    <string name="attendances_present">Obecności:</string>
    <string name="attendances_releases">Zwolnienia:</string>
    <string name="attendances_summary_subject_loading_format">Wszystkie przedmioty</string>
    <string name="attendances_summary_title_loading_format">Podsumowanie - ładowanie…</string>
    <string name="back">Wróć</string>
    <string name="bell_sync_adjust_content">Dostosuj wartość przesunięcia dzwonka. Format: ±H:MM:SS</string>
    <string name="bell_sync_adjust_error">Nieprawidłowy format</string>
    <string name="bell_sync_break_item">przerwa (%s)</string>
    <string name="bell_sync_cannot_now">Synchronizacja jest niemożliwa, ponieważ teraz nie ma żadnych lekcji. Spróbuj jeszcze raz np. pod koniec lekcji albo przerwy. Pamiętaj, że powinieneś to uruchomić jeszcze przed planowanym czasem dzwonka.</string>
    <string name="bell_sync_choose_howto">Wybierz najbliższy dzwonek, abyś mógł go zsynchronizować z aplikacją.</string>
    <string name="bell_sync_current_dialog">"\n\nAktualna kalibracja to %s"</string>
    <string name="bell_sync_howto">Kliknij w ikonę dzwonka, kiedy dzwonek zadzwoni. Licznik czasu zostanie zsynchronizowany z czasem dzwonka.\n\nCzas według planu to %s\n\nAktualna różnica wynosi %s</string>
    <string name="bell_sync_lesson_item">lekcja %s (%s)</string>
    <string name="bell_sync_reset_confirm">Czy na pewno zresetować synchronizację?</string>
    <string name="bell_sync_results">Dzwonek jest niedokładny o %s</string>
    <string name="bell_sync_time_title">Godzina dzwonka do synchronizacji</string>
    <string name="bell_sync_title">Synchronizacja z dzwonkiem</string>
    <string name="calendar_app_not_found">Nie znaleziono aplikacji kalendarza</string>
    <string name="cancel">Anuluj</string>
    <string name="card_action_move_down">Przesuń w dół</string>
    <string name="card_action_move_up">Przesuń w górę</string>
    <string name="card_events_header_title">Najbliższe wydarzenia</string>
    <string name="card_grades_button">Przejdź do ocen</string>
    <string name="card_grades_header_title">Najnowsze oceny</string>
    <string name="card_grades_no_data">Brak ocen do wyświetlenia</string>
    <string name="card_lucky_number_not_set">Kliknij, aby ustawić swój numerek.</string>
    <string name="card_lucky_number_set_text">Ustaw swój numer w dzienniku szkolnym:</string>
    <string name="card_lucky_number_set_title">Twój numer</string>
    <string name="card_lucky_number_text_format">Twój numerek to %d.</string>
    <string name="card_lucky_number_title_format">%d to dzisiejszy Szczęśliwy numerek.</string>
    <string name="card_timetable_button">Przejdź do planu</string>
    <string name="card_timetable_event_overview">Wydarzenia:</string>
    <string name="card_timetable_event_overview_format" translatable="false">\n%s %s - %s</string>
    <string name="card_timetable_following">Za chwilę:</string>
    <string name="card_timetable_header_title">Plan lekcji na dzisiaj</string>
    <string name="card_timetable_lesson_duration">Czas trwania lekcji</string>
    <string name="card_timetable_lesson_duration_format" translatable="false">%s - %s</string>
    <string name="card_timetable_lesson_overview"><![CDATA[Pierwsze lekcje:<br>%s %s<br>%s %s]]></string>
    <string name="card_timetable_lesson_overview_ongoing"><![CDATA[Następne lekcje:<br>%s %s<br>%s %s]]></string>
    <string name="card_timetable_no_data">Brak lekcji tego dnia</string>
    <string name="card_timetable_no_timetable">Brak planu lekcji</string>
    <string name="card_timetable_now">Teraz:</string>
    <string name="card_timetable_title">Plan lekcji na %s</string>
    <string name="card_timetable_wtf">Koniec lekcji! To nie powinno się nigdy pokazać!</string>
    <string name="card_timetable_wtf_report">Zgłoś błąd!</string>
    <string name="card_type_events">Najbliższe wydarzenia</string>
    <string name="card_type_grades">Ostatnie oceny</string>
    <string name="card_type_lucky_number">Szczęśliwy numerek</string>
    <string name="card_type_timetable">Plan lekcji</string>
    <string name="card_update_button">Pobierz</string>
    <string name="card_update_text_format">Posiadasz wersję %s, dostępna jest %s.</string>
    <string name="card_update_title">Dostępna jest aktualizacja</string>
    <string name="choose_file">Wybierz plik</string>
    <string name="choose_profile">Wybierz profil</string>
    <string name="close">Zamknij</string>
    <string name="compose">Napisz</string>
    <string name="compose_title">Napisz</string>
    <string name="concat_2_strings" translatable="false">%s%s</string>
    <string name="configure">Konfiguruj</string>
    <string name="copied_to_clipboard">Skopiowano do schowka</string>
    <string name="copy_to_clipboard">Skopiuj do schowka</string>
    <string name="counter_activity_sync">Synchronizuj</string>
    <string name="crash_advice_info">Jeśli aplikacja nie chce się uruchomić, możesz spróbować ponownie pobrać dane. Kliknij na przycisk, a następnie Restartuj aplikację.</string>
    <string name="crash_details">Szczegóły błędu</string>
    <string name="crash_feature">It\'s not a bug. It\'s a feature!</string>
    <string name="crash_notice">Proszę, wyślij zgłoszenie błędu.</string>
    <string name="crash_report">Zgłoś błąd</string>
    <string name="crash_restart">Restartuj aplikację</string>
    <string name="crash_sync_button">Synchronizuj</string>
    <string name="crash_title">E-dziennik:\nWystąpił nieoczekiwany błąd.\nPrzepraszamy za problem.</string>
    <string name="dialog_grades_config_color_by_value">Wg wartości oceny</string>
    <string name="dialog_grades_config_color_from_eregister">Wg e-dziennika</string>
    <string name="dialog_grades_config_sort_by_date">Od najnowszych</string>
    <string name="dialog_grades_config_sort_by_subject">Wg nazwy przedmiotu</string>
    <string name="main_menu_add">Dodaj…</string>
    <string name="main_menu_agenda_view_type">Zmień widok</string>
    <string name="main_menu_block_timetable">Generuj blokowy plan lekcji</string>
    <string name="main_menu_grades_average">Średnia ocen</string>
    <string name="main_menu_grades_color_mode">Kolor ocen</string>
    <string name="main_menu_reload">Załaduj ponownie</string>
    <string name="main_menu_sort_by">Sortuj</string>
    <string name="menu_grades_average_mode">Sposób obliczania średniej końcoworocznej</string>
    <string name="menu_grades_color_mode">Kolor wyświetlanych ocen</string>
    <string name="menu_grades_sort_mode">Sortuj oceny</string>
    <string name="menu_mark_as_read">Oznacz jako przeczytane</string>
    <string name="menu_sync">Synchronizuj</string>
    <string name="other">Inne</string>
    <string name="settings_register_avg_mode_0">Średnia ze średnich obu semestrów</string>
    <string name="settings_register_avg_mode_1">Ocena końcowa z 1. sem + średnia z 2. sem</string>
    <string name="settings_register_avg_mode_2">Średnia z 1. sem + ocena końcowa z 2. sem</string>
    <string name="settings_register_avg_mode_3">Średnia z ocen końcowych obu semestrów</string>
    <string name="settings_register_avg_mode_4">Średnia wszystkich ocen z obu semestrów</string>
    <string name="settings_register_dont_count_zero_text">Nie wliczaj oceny 0 do średniej</string>
    <string name="timetable_generate_current_week_format">Ze zmianami na ten tydzień (%s do %s)</string>
    <string name="timetable_generate_next_week_format">Ze zmianami na następny tydzień (%s do %s)</string>
    <string name="timetable_generate_no_colors">Do wydruku (oszczędza kolory)</string>
    <string name="timetable_generate_selected_week">Na wybrany tydzień</string>
    <string name="timetable_generate_show_profile_name">Pokaż nazwę profilu</string>
    <string name="timetable_generate_show_teachers_names">Pokaż imiona i nazwiska nauczycieli</string>
    <string name="agenda_config_lesson_changes">Pokazuj zmiany planu lekcji</string>
    <string name="agenda_config_teacher_absence">Pokazuj nieobecności nauczycieli</string>
    <string name="agenda_config_compact_mode">Tryb kompaktowy</string>
    <string name="agenda_config_compact_mode_hint">Mniejszy rozmiar wydarzeń na liście</string>
    <string name="agenda_config_group_by_type">Grupuj wydarzenia tego samego typu</string>
    <string name="agenda_config_mode_unavailable">Niedostępne w trybie kalendarza</string>
    <string name="agenda_config_event_sharing">Udostępnianie wydarzeń</string>
    <string name="agenda_config_event_sharing_enabled">Włącz Udostępnianie wydarzeń</string>
    <string name="agenda_config_elearning">Nauczanie zdalne</string>
    <string name="agenda_config_elearning_mark">Ustaw wydarzenia jako lekcje on-line</string>
    <string name="agenda_config_elearning_type">Wybierz rodzaj wydarzeń</string>
    <string name="agenda_config_elearning_group">Grupuj lekcje on-line na liście</string>
    <string name="agenda_config_not_available_yet">Funkcja jeszcze nie jest dostępna.</string>
</resources>