<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1000"
        android:title="@string/menu_sync"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_mark_as_read"
        android:orderInCategory="950"
        android:title="@string/menu_mark_as_read"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add"
        android:orderInCategory="900"
        android:title="@string/main_menu_add"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_agenda_view_type"
        android:orderInCategory="800"
        android:title="@string/main_menu_agenda_view_type"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="710"
        android:title="@string/main_menu_sort_by"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_grades_color_mode"
        android:orderInCategory="700"
        android:title="@string/main_menu_grades_color_mode"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_grades_average"
        android:orderInCategory="680"
        android:title="@string/main_menu_grades_average"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_reload"
        android:orderInCategory="600"
        android:title="@string/main_menu_reload"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_block_timetable"
        android:orderInCategory="500"
        android:title="@string/main_menu_block_timetable"
        android:visible="false"
        app:showAsAction="never"/>

</menu>