<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Kacper Ziubryniewicz 2020-1-5
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="16dp">

    <RadioGroup
        android:id="@+id/weekSelectionRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/withChangesCurrentWeekRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            tools:text="@string/timetable_generate_current_week_format" />

        <RadioButton
            android:id="@+id/withChangesNextWeekRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/timetable_generate_next_week_format" />

        <RadioButton
            android:id="@+id/forSelectedWeekRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timetable_generate_selected_week" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/divider" />

    <CheckBox
        android:id="@+id/showProfileNameCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:text="@string/timetable_generate_show_profile_name" />

    <CheckBox
        android:id="@+id/showTeachersNamesCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="0dp"
        android:text="@string/timetable_generate_show_teachers_names" />

    <CheckBox
        android:id="@+id/noColorsCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:text="@string/timetable_generate_no_colors" />
</LinearLayout>
